[package]
name = "baud-boss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# serialport for serial communication with devices
serialport5 = "5.0.2"

# clap for command line argument parsing
clap = { version = "4.5.4", features = ["derive"] }

# ratatui for the Terminal UI
ratatui = "0.26.1"

# crossterm for cross-platform terminal manipulation
crossterm = "0.27.0"
