[package]
name = "baud-boss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# serialport for serial communication with devices
serialport5 = "5.0.2"

# clap for command line argument parsing
clap = { version = "4.5.4", features = ["derive"] }

# crossterm because ratatui uses it
crossterm = "0.27.0"
chrono = "0.4.38"

[dependencies.ratatui]
# version = "0.26.2"
git = "https://github.com/DeflateAwning/ratatui.git"
# branch = "da-scrollbar-is_at_bottom"

# git = "https://github.com/EdJoPaTo/ratatui.git"
branch = "scrollbar-overscroll"
features = ["unstable-rendered-line-info"]
